# Snoopie

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  flake.nix  parse_and_vis.py
cmake/: FindNVBIT.cmake
cmake/nvshmem/: NVSHMEMConfig.cmake  NVSHMEMTargets-noconfig.cmake  NVSHMEMTargets.cmake  NVSHMEMVersion.cmake
core/: cuda.h  generated_cuda_meta.h  instr_types.h  nvbit.h  nvbit_reg_rw.h  nvbit_tool.h  tools_cuda_api_meta.h
core/utils/: channel.hpp  utils.h
electron_builder/: README.md  package.json  streamlit_app
evaluation/: jacobi2d_p2p_4_512x512_1.txt
src/: main.py
src/mem_multigpu/: CMakeLists.txt  Makefile  inject_funcs.cu  line_info.h  mem_multigpu.cu  obj_database.cu  object_database.cuh  object_info.h  python_support.cu
src/mem_multigpu/allocation-only-test/: cuda_wrapper.hpp  test_mult.cu  wrapper.cpp
src/mem_multigpu/include/: adm_common.h  adm_config.h  adm_database.h  adm_splay.h  common.h  ptr_util.hpp  util.h
src/mem_multigpu/vector-add-test/: vectoradd.cu
test-apps/bfs/: Makefile  bfs  bfs_basic.cu  bfs_cpu.cu  bfs_cuda_frontier.cu  bfs_cuda_frontier_numbers.cu  workq_ring.cu
test-apps/bfs-ori/: bfs_basic.cu
test-apps/clocks/: Makefile  clocking-writes.cu
test-apps/diim/: Makefile  device-initiated_implicit_memcpy.cu  runme.sh  simple-diim.ptx
test-apps/diim-mallocwrap/: Makefile  cuda_wrapper.hpp  device-initiated_implicit_memcpy.cu  test_mult.cu  wrapper.cpp
test-apps/mult-kernels/: Makefile  device-initiated_implicit_memcpy.cu  runme.sh
test-apps/nccl/: Makefile  main  main.cu  runme.sh
test-apps/nvshmem/: Makefile  main.cu  runme.sh
test-apps/nvshmem-mallocwrap/: Makefile  cuda-11-nccl-nvshmem_my_own.sh  main.cu  msasongko17-env.txt
test-apps/parallel-multigpu-context-switch/: Makefile  pmcs.cu
test-apps/remote-local-malloc/: Makefile
test-apps/simple-diim/: Makefile  device-initiated_implicit_memcpy.cu  simple-diim.ptx  testfile.txt
test-apps/vectoradd/: Makefile  vectoradd.cu
test-apps/visualizer-benchs/one-way-four-gpus/: Makefile
test-apps/visualizer-benchs/one-way-two-gpus/: two-gpus.cu
test-apps/visualizer-benchs/two-way-two-gpus/: Makefile  two-gpus.cu
tests/: CMakeLists.txt  run-tests.sh  wrapper.cpp
tests/bfs/: CMakeLists.txt  Makefile  bfs_basic.cu  bfs_cpu.cu  bfs_cuda_frontier.cu  bfs_cuda_frontier_numbers.cu  bfs_cuda_simple.cu  workq_ring.cu
tests/diim/: Makefile  device-initiated-direct-access.cu
tests/diim-mallocwrap/: Makefile  device-initiated_implicit_memcpy.cu  runme.sh  test_mult.cu  wrapper.cpp
tests/hipa/: Makefile  hipa  host-initiated-peer-access.cu
tests/nccl-allreduce/: Makefile  all_reduce.cu
tests/nvshmem/: Makefile  main.cu
tests/nvshmem-mallocwrap/: Makefile  cuda-11-nccl-nvshmem.sh  main.cu  runme.sh
tests/obj-testcases/multi-files/: Makefile  device-initiated-direct-access.cu  simple1.cu  simple2.cu
tests/obj-testcases/multi-files-deeper-stack/: Makefile  device-initiated-direct-access.cu  simple1.cu
tests/obj-testcases/multi-kernel/: Makefile  device-initiated-direct-access.cu
tests/obj-testcases/nvshmem-multi-files/: CMakeLists.txt  Makefile  device-initiated-direct-access.cu  simple1.cu  simple2.cu
tests/obj-testcases/nvshmem-multi-files-fixed/: Makefile  Makefile1  cuda_wrapper.hpp  device-initiated-direct-access.cu  main.cu
tests/obj-testcases/single-kernel/: Makefile  device-initiated-direct-access.cu
tests/parallel-multigpu-context-switch/: Makefile  pmcs.cu
tests/remote-local-malloc/: Makefile  main.cu
tests/stencil/: Makefile  wrapper.cpp
tests/stencil/stencil-base/: Makefile  jacobi.cu
tests/stencil/stencil-nvshmem_nvidia/: CMakeLists.txt  Makefile  Makefile.2  cuda_wrapper.hpp  jacobi.cu  wrapper.cpp
tests/stencil/stencil-p2p_base/: CMakeLists.txt  Makefile  jacobi.cu  jacobi_single_threaded_cp.cu  jacobi_wrapped.cu
tests/stencil/stencil-p2p_nvidia/: Makefile  jacobi  jacobi.cu  jacobi_wrapped.cu
tests/stencil/stencil-tb-singlestream/: CMakeLists.txt  Makefile  common.h  jacobi.cu  main.cu  multi-threaded-two-block-comm.cuh
tests/visualizer-benchs/one-accessor-three-owners/: four-gpus.cu
tests/visualizer-benchs/one-way-four-gpus/: four-gpus.cu  wrapper.cpp
tests/visualizer-benchs/one-way-two-gpus/: Makefile  two-gpus.cu
tests/visualizer-benchs/three-accessor-one-owner/: Makefile  cuda_wrapper.hpp  four-gpus.cu
tests/visualizer-benchs/two-way-two-gpus/: Makefile  two-gpus.cu
tools/cudaops/: common.h  cudaops.cu  inject_funcs.cu  util.h
tools/instr_count/: inject_funcs.cu  instr_count.cu
tools/instr_count_bb/: inject_funcs.cu  instr_count.cu
tools/instr_count_cuda_graph/: inject_funcs.cu  instr_count_cuda_graph.cu
tools/mem_multigpu/: CMakeLists.txt  Makefile  adm.h  adm_common.h  adm_database.h  adm_memory.h  adm_splay.h  common.h  inject_funcs.cu  mem_multigpu.cu  obj_database.cu  test_mult.cu  util.h
tools/mem_multigpu/allocation-only-test/: cuda_wrapper.hpp  test_mult.cu  wrapper.cpp
tools/mem_multigpu/include/: adm.h  adm_common.h  adm_config.h  adm_database.h  adm_memory.h  adm_splay.h  common.h  util.h
tools/mem_multigpu/vector-add-test/: cuda_wrapper.hpp  test_mult.cu  vectoradd.cu  wrapper.cpp
tools/mem_printf/: inject_funcs.cu  mem_printf.cu
tools/mem_tool_2/: .mem_tool_2.cu.swp  Makefile  inject_funcs.cu  mem_tool_2.cu
tools/mem_trace/: common.h  inject_funcs.cu  mem_trace.cu
tools/mov_replace/: inject_funcs.cu  mov_replace.cu
tools/noop/: noop.cu
tools/opcode_hist/: inject_funcs.cu  opcode_hist.cu
tools/record_reg_vals/: Makefile  common.h  inject_funcs.cu  record_reg_vals.cu
visualizer/: argumentparser.py  debug2.py  parse_and_vis.py  requirements.txt  streamlit_app.py
visualizer/.streamlit/: config.toml
visualizer/includes/: argumentparser.py  electron_checker.py  filepath_handler.py  filepicker_page.py  parser.py  streamlit_globals.py  tables.py
visualizer/st-click-detector-0.1.3/: PKG-INFO
visualizer/st-click-detector-0.1.3/st_click_detector.egg-info/: PKG-INFO  (+2 more)
visualizer/tk_folder_chooser/: tk_folder_chooser.py
